--- a/The JBB/Base.lproj/LaunchScreen.storyboard
+++ b/The JBB/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,15 +16,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="8Ad-7J-K3K">
-                                <rect key="frame" x="132" y="378" width="150" height="150"/>
+                                <rect key="frame" x="107" y="353" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="xEB-GN-R1T"/>
-                                    <constraint firstAttribute="width" constant="150" id="z0F-zR-ouf"/>
+                                    <constraint firstAttribute="height" constant="200" id="xEB-GN-R1T"/>
+                                    <constraint firstAttribute="width" constant="200" id="z0F-zR-ouf"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="8Ad-7J-K3K" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="k6y-BQ-upk"/>
                             <constraint firstItem="8Ad-7J-K3K" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="pM4-ak-xTN"/>
@@ -39,8 +38,5 @@
     </scenes>
     <resources>
         <image name="Logo" width="422" height="334"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
